// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-avatar-group #render renders avatar group 1`] = `
<gux-avatar-group-beta role="menu">
  <template shadowrootmode="open">
    <slot>
    </slot>
    <gux-avatar-overflow-beta>
      <gux-avatar-overflow-item-beta name="Paul Quinn" accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Roisin Smyth" accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Thomas U." accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Valerie Wall" accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Xavier Yarrow" accent="auto">
      </gux-avatar-overflow-item-beta>
    </gux-avatar-overflow-beta>
  </template>
  <gux-avatar-group-item-beta name="Conor Darcy" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Conor Darcy" tabindex="0" class="gux-avatar gux-accent-0">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            CD
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Conor Darcy
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Elliot Fitzgerald" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Elliot Fitzgerald" tabindex="-1" class="gux-avatar gux-accent-5">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            EF
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Elliot Fitzgerald
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Greg Hayes" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Greg Hayes" tabindex="-1" class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            GH
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Greg Hayes
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Iseult Jones" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Iseult Jones" tabindex="-1" class="gux-avatar gux-accent-9">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            IJ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Iseult Jones
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="John King" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="John King" tabindex="-1" class="gux-avatar gux-accent-8">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            JK
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            John King
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Larissa Mendez" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Larissa Mendez" tabindex="-1" class="gux-avatar gux-accent-6">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            LM
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Larissa Mendez
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Nancy Omaha" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Nancy Omaha" tabindex="-1" class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            NO
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Nancy Omaha
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Paul Quinn" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Paul Quinn" tabindex="-1" class="gux-avatar gux-accent-9">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            PQ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Paul Quinn
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Roisin Smyth" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Roisin Smyth" tabindex="-1" class="gux-avatar gux-accent-5">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            RS
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Roisin Smyth
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Thomas U." hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Thomas U." tabindex="-1" class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            TU
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Thomas U.
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Valerie Wall" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Valerie Wall" tabindex="-1" class="gux-avatar gux-accent-4">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            VW
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Valerie Wall
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Xavier Yarrow" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Xavier Yarrow" tabindex="-1" class="gux-avatar gux-accent-3 gux-last-item">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            XY
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Xavier Yarrow
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
</gux-avatar-group-beta>
`;

exports[`gux-avatar-group #render renders avatar group with add item 1`] = `
<gux-avatar-group-beta role="menu">
  <template shadowrootmode="open">
    <slot>
    </slot>
    <gux-avatar-overflow-beta>
      <gux-avatar-overflow-item-beta name="Paul Quinn" accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Roisin Smyth" accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Thomas U." accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Valerie Wall" accent="auto">
      </gux-avatar-overflow-item-beta>
      <gux-avatar-overflow-item-beta name="Xavier Yarrow" accent="auto">
      </gux-avatar-overflow-item-beta>
    </gux-avatar-overflow-beta>
    <gux-avatar-group-add-item-beta class="gux-add-item-overflow" role="menuitem">
      <template shadowrootmode="open" shadowrootdelegatesfocus>
        <button type="button" aria-label="Add more items to group" tabindex="-1" class="gux-avatar">
          <span aria-hidden="true">
            +
          </span>
          <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
            <div slot="content">
              Add more items to group
            </div>
          </gux-tooltip-beta>
        </button>
      </template>
    </gux-avatar-group-add-item-beta>
  </template>
  <gux-avatar-group-item-beta name="Conor Darcy" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Conor Darcy" tabindex="0" class="gux-avatar gux-accent-0">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            CD
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Conor Darcy
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Elliot Fitzgerald" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Elliot Fitzgerald" tabindex="-1" class="gux-avatar gux-accent-5">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            EF
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Elliot Fitzgerald
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Greg Hayes" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Greg Hayes" tabindex="-1" class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            GH
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Greg Hayes
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Iseult Jones" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Iseult Jones" tabindex="-1" class="gux-avatar gux-accent-9">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            IJ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Iseult Jones
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="John King" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="John King" tabindex="-1" class="gux-avatar gux-accent-8">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            JK
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            John King
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Larissa Mendez" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Larissa Mendez" tabindex="-1" class="gux-avatar gux-accent-6">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            LM
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Larissa Mendez
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Nancy Omaha" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Nancy Omaha" tabindex="-1" class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            NO
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Nancy Omaha
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Paul Quinn" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Paul Quinn" tabindex="-1" class="gux-avatar gux-accent-9">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            PQ
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Paul Quinn
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Roisin Smyth" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Roisin Smyth" tabindex="-1" class="gux-avatar gux-accent-5">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            RS
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Roisin Smyth
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Thomas U." hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Thomas U." tabindex="-1" class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            TU
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Thomas U.
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Valerie Wall" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Valerie Wall" tabindex="-1" class="gux-avatar gux-accent-4">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            VW
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Valerie Wall
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-item-beta name="Xavier Yarrow" hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Xavier Yarrow" tabindex="-1" class="gux-avatar gux-accent-3">
        <slot name="image">
          <span class="gux-avatar-initials" aria-hidden="true">
            XY
          </span>
        </slot>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Xavier Yarrow
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-item-beta>
  <gux-avatar-group-add-item-beta hidden="" role="menuitem">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
      <button type="button" aria-label="Add more items to group" tabindex="-1" class="gux-avatar">
        <span aria-hidden="true">
          +
        </span>
        <gux-tooltip-beta aria-hidden="true" visual-only="" placement="top">
          <div slot="content">
            Add more items to group
          </div>
        </gux-tooltip-beta>
      </button>
    </template>
  </gux-avatar-group-add-item-beta>
</gux-avatar-group-beta>
`;
